force-app/main/default/objects/Event_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Attended__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <defaultValue>false</defaultValue>
        <description>Field to capture Event attendance</description>
        <label>Attended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booked_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Form_Response__c</fullName>
        <description>Raw text of questions and answers from the booking form</description>
        <label>Booking Form Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendar_Name__c</fullName>
        <label>Calendar Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendly_Event_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendly Event Type</label>
        <referenceTo>Calendly_Event_Type__c</referenceTo>
        <relationshipLabel>Event Bookings</relationshipLabel>
        <relationshipName>Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date_Time__c</fullName>
        <label>Cancelled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Event Bookings</relationshipLabel>
        <relationshipName>Event_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Bookings</relationshipLabel>
        <relationshipName>Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_In_Minutes__c</fullName>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(!ISBLANK(Cancelled_Date_Time__c),&apos;Cancelled&apos;,
  /* Minutes/Minutes In Day for DT addition */
  IF(Start_Date_Time__c+(Duration_In_Minutes__c/1440) &lt; NOW(),&apos;Complete&apos;,
    IF(Start_Date_Time__c &lt; NOW(),&apos;In Progress&apos;,
      &apos;Scheduled&apos;
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Event Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ISE_Booking_event</fullName>
        <columns>NAME</columns>
        <columns>Attended__c</columns>
        <columns>Booked_By__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Calendly_Event_Type__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All ISE Booking event</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Bookings</pluralLabel>
    <recordTypes>
        <fullName>Calendly</fullName>
        <active>true</active>
        <label>Calendly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>